tests/ui/suggestions/non_ascii_ident.rs
fn main() {
    // There shall be no suggestions here. In particular not `Ok`.
    let _ = 读文; //~ ERROR cannot find value `读文` in this scope
}
